--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Nezha Agant Docker
+name: Release Nezha Agent Docker
 
 on:
   schedule:
@@ -13,11 +13,11 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      nezhaAgant: ${{ steps.nezhaAgant.outputs.result }}
+      nezhaAgent: ${{ steps.nezhaAgent.outputs.result }}
       package: ${{ steps.package.outputs.result }}
     steps:
-      - name: Get latest Nezha agant release
-        id: nezhaAgant
+      - name: Get latest Nezha agent release
+        id: nezhaAgent
         uses: actions/github-script@v7
         env:
           OWNER: nezhahq
@@ -36,13 +36,13 @@ jobs:
             return latest.tag_name.replace('v','')
 
       - name: Verify result
-        run: echo "Nezha Agant version ${{ steps.nezhaAgant.outputs.result }}"
+        run: echo "Nezha Agent version ${{ steps.nezhaAgent.outputs.result }}"
 
-      - name: Get Nezha Agant docker package latest version
+      - name: Get Nezha Agent docker package latest version
         id: package
         uses: actions/github-script@v7
         env:
-          PACKAGE_NAME: nezha-agant
+          PACKAGE_NAME: nezha-agent
           PACKAGE_TYPE: container
         with:
           result-encoding: string
@@ -58,7 +58,7 @@ jobs:
             )[0];
             return latest?.metadata.container.tags?.find((v) => /^v?\d+\.\d+\.\d+$/.test(v)) || "0.0.0"
       - name: Verify results
-        run: echo "Nezha Agant version ${{ steps.nezhaAgant.outputs.result }}\n Package verion ${{steps.package.outputs.result}}"
+        run: echo "Nezha Agent version ${{ steps.nezhaAgent.outputs.result }}\n Package verion ${{steps.package.outputs.result}}"
 
   release:
     runs-on: ubuntu-latest
@@ -67,7 +67,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
-    if: (needs.check.outputs.nezhaAgant != needs.check.outputs.package) || github.event_name == 'workflow_dispatch'
+    if: (needs.check.outputs.nezhaAgent != needs.check.outputs.package) || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -87,14 +87,14 @@ jobs:
       
       - name: Get version from needs or input
         id: version
-        run: echo "value=${{ github.event.inputs.version || needs.check.outputs.nezhaAgant }}" >> $GITHUB_OUTPUT
+        run: echo "value=${{ github.event.inputs.version || needs.check.outputs.nezhaAgent }}" >> $GITHUB_OUTPUT
       
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/nezha-agant
+            ghcr.io/${{ github.repository_owner }}/nezha-agent
           tags: |
             type=semver,pattern={{version}},value=${{ steps.version.outputs.value }}
             type=semver,pattern={{major}}.{{minor}},value=${{ steps.version.outputs.value }}
